[gd_scene load_steps=3 format=2]

[ext_resource path="res://demo/currencies/Transfers.gd" type="Script" id=1]
[ext_resource path="res://demo/shared/TxnInfo.tscn" type="PackedScene" id=3]

[node name="Transfer" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="MBox-Request" type="MarginContainer" parent="."]
margin_right = 492.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MBox-Request"]
margin_left = 16.0
margin_top = 8.0
margin_right = 476.0
margin_bottom = 556.0
custom_constants/separation = 16

[node name="FromGrid" type="GridContainer" parent="MBox-Request/VBoxContainer"]
margin_right = 460.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="Label-v03" type="Label" parent="MBox-Request/VBoxContainer/FromGrid"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "Token"

[node name="TokenInput" type="LineEdit" parent="MBox-Request/VBoxContainer/FromGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 460.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v04" type="Label" parent="MBox-Request/VBoxContainer/FromGrid"]
margin_top = 37.0
margin_right = 120.0
margin_bottom = 51.0
rect_min_size = Vector2( 120, 0 )
text = "Password"

[node name="PasswordInput" type="LineEdit" parent="MBox-Request/VBoxContainer/FromGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 32.0
margin_right = 460.0
margin_bottom = 56.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v02" type="Label" parent="MBox-Request/VBoxContainer/FromGrid"]
margin_top = 69.0
margin_right = 120.0
margin_bottom = 83.0
rect_min_size = Vector2( 120, 0 )
text = "Currency Id"

[node name="CurrencyInput" type="LineEdit" parent="MBox-Request/VBoxContainer/FromGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 64.0
margin_right = 460.0
margin_bottom = 88.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="ToGrid 01" type="GridContainer" parent="MBox-Request/VBoxContainer"]
margin_top = 104.0
margin_right = 460.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="Label-v06" type="Label" parent="MBox-Request/VBoxContainer/ToGrid 01"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "a) Amount"

[node name="AmountInputV1" type="LineEdit" parent="MBox-Request/VBoxContainer/ToGrid 01"]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 460.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v05" type="Label" parent="MBox-Request/VBoxContainer/ToGrid 01"]
margin_top = 37.0
margin_right = 120.0
margin_bottom = 51.0
rect_min_size = Vector2( 120, 0 )
text = "a) Reference"

[node name="ReferenceInputV1" type="LineEdit" parent="MBox-Request/VBoxContainer/ToGrid 01"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 32.0
margin_right = 460.0
margin_bottom = 56.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v01" type="Label" parent="MBox-Request/VBoxContainer/ToGrid 01"]
margin_top = 69.0
margin_right = 120.0
margin_bottom = 83.0
rect_min_size = Vector2( 120, 0 )
text = "a) Wallet Id"

[node name="WalletInputV1" type="LineEdit" parent="MBox-Request/VBoxContainer/ToGrid 01"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 64.0
margin_right = 460.0
margin_bottom = 88.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="ToGrid 02" type="GridContainer" parent="MBox-Request/VBoxContainer"]
margin_top = 208.0
margin_right = 460.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="Label-v06" type="Label" parent="MBox-Request/VBoxContainer/ToGrid 02"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "b) Amount"

[node name="AmountInputV2" type="LineEdit" parent="MBox-Request/VBoxContainer/ToGrid 02"]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 460.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v05" type="Label" parent="MBox-Request/VBoxContainer/ToGrid 02"]
margin_top = 37.0
margin_right = 120.0
margin_bottom = 51.0
rect_min_size = Vector2( 120, 0 )
text = "b) Reference"

[node name="ReferenceInputV2" type="LineEdit" parent="MBox-Request/VBoxContainer/ToGrid 02"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 32.0
margin_right = 460.0
margin_bottom = 56.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v01" type="Label" parent="MBox-Request/VBoxContainer/ToGrid 02"]
margin_top = 69.0
margin_right = 120.0
margin_bottom = 83.0
rect_min_size = Vector2( 120, 0 )
text = "b) Wallet Id"

[node name="WalletInputV2" type="LineEdit" parent="MBox-Request/VBoxContainer/ToGrid 02"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 64.0
margin_right = 460.0
margin_bottom = 88.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="ToGrid 03" type="GridContainer" parent="MBox-Request/VBoxContainer"]
margin_top = 312.0
margin_right = 460.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="Label-v06" type="Label" parent="MBox-Request/VBoxContainer/ToGrid 03"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "c) Amount"

[node name="AmountInputV3" type="LineEdit" parent="MBox-Request/VBoxContainer/ToGrid 03"]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 460.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v05" type="Label" parent="MBox-Request/VBoxContainer/ToGrid 03"]
margin_top = 37.0
margin_right = 120.0
margin_bottom = 51.0
rect_min_size = Vector2( 120, 0 )
text = "c) Reference"

[node name="ReferenceInputV3" type="LineEdit" parent="MBox-Request/VBoxContainer/ToGrid 03"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 32.0
margin_right = 460.0
margin_bottom = 56.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v01" type="Label" parent="MBox-Request/VBoxContainer/ToGrid 03"]
margin_top = 69.0
margin_right = 120.0
margin_bottom = 83.0
rect_min_size = Vector2( 120, 0 )
text = "c) Wallet Id"

[node name="WalletInputV3" type="LineEdit" parent="MBox-Request/VBoxContainer/ToGrid 03"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 64.0
margin_right = 460.0
margin_bottom = 88.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="BtnGrid" type="GridContainer" parent="MBox-Request/VBoxContainer"]
margin_top = 416.0
margin_right = 460.0
margin_bottom = 436.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="TransferButton" type="Button" parent="MBox-Request/VBoxContainer/BtnGrid"]
unique_name_in_owner = true
margin_right = 222.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "transfer (a)"

[node name="BatchButton" type="Button" parent="MBox-Request/VBoxContainer/BtnGrid"]
unique_name_in_owner = true
margin_left = 238.0
margin_right = 460.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "batch transfer (a/b/c)"

[node name="HSeparator" type="VSeparator" parent="."]
margin_left = 496.0
margin_right = 520.0
margin_bottom = 564.0
custom_constants/separation = 24

[node name="MBox-Result" type="MarginContainer" parent="."]
margin_left = 524.0
margin_right = 1016.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="TxnInfo" parent="MBox-Result" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_left = 16.0
margin_top = 8.0
margin_right = 476.0
margin_bottom = 556.0
